--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "nunomaduro/collision": "^6.1",
         "nunomaduro/larastan": "^2.1",
         "phpunit/phpunit": "^9.5.10",
+        "rector/rector": "^0.13.8",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
